# opencdc

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/opencdc-config/: Cargo.toml
crates/opencdc-config/src/: lib.rs  pipeline.rs  source.rs
crates/opencdc-connector/: Cargo.toml
crates/opencdc-connector/src/: config.rs  lib.rs  trait.rs
crates/opencdc-connector/src/mongodb/: config.rs  mod.rs  snapshot.rs  stream.rs
crates/opencdc-connector/src/mysql/: binlog.rs  column.rs  config.rs  mod.rs  snapshot.rs
crates/opencdc-connector/src/postgres/: config.rs  decoder.rs  mod.rs  replication.rs  snapshot.rs  types.rs
crates/opencdc-core/: Cargo.toml
crates/opencdc-core/src/: arrow.rs  change_event.rs  connector_type.rs  error.rs  lib.rs  offset.rs  operation.rs  schema.rs  source_info.rs  transaction.rs
crates/opencdc-demo/: Cargo.toml
crates/opencdc-demo/src/: main.rs
crates/opencdc-mcp/: Cargo.toml
crates/opencdc-mcp/src/: health.rs  main.rs  service.rs  state.rs
crates/opencdc-pipeline/: Cargo.toml
crates/opencdc-pipeline/src/: error.rs  lib.rs  pipeline.rs  sink.rs  transform.rs
crates/opencdc-schema/: Cargo.toml
crates/opencdc-schema/src/: arrow_bridge.rs  builder.rs  evolution.rs  lib.rs  naming.rs  registry.rs
crates/opencdc-serde/: Cargo.toml
crates/opencdc-serde/src/: arrow_ipc.rs  avro.rs  batch.rs  envelope.rs  json.rs  lib.rs  registry.rs
crates/opencdc-sink-openlake/: Cargo.toml
crates/opencdc-sink-openlake/src/: lib.rs  persistent.rs
scripts/: init-mongo.js  init-mysql.sql  init-postgres.sql
