[workspace]
resolver = "2"
members = [
    "crates/opencdc-core",
    "crates/opencdc-serde",
    "crates/opencdc-schema",
    "crates/opencdc-connector",
    "crates/opencdc-mcp",
    "crates/opencdc-pipeline",
    "crates/opencdc-sink-openlake",
    "crates/opencdc-demo",
    "crates/opencdc-config",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/anomalyco/opencdc"

[workspace.dependencies]
arrow = "57"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
pretty_assertions = "1"
async-trait = "0.1"
bytes = "1"
futures = "0.3"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }
fallible-iterator = "0.3"
postgres-protocol = "0.6"
postgres-types = { version = "0.2", features = ["with-chrono-0_4", "with-uuid-1"] }
rmcp = { version = "2", default-features = false, features = ["server", "macros", "transport-io"] }
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
sha1 = "0.10"
hex = "0.4"
tokio-util = "0.7"
mongodb = { version = "3.7", features = ["rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
openlake-core = { path = "../openlake/crates/openlake-core" }
openlake-query = { path = "../openlake/crates/openlake-query" }
