[package]
name = "opencdc-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
opencdc-core = { path = "../opencdc-core" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"
thiserror = { workspace = true }
