[package]
name = "opencdc-connector"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
postgres = ["dep:tokio-postgres", "dep:postgres-protocol", "dep:postgres-types", "dep:fallible-iterator"]
mysql = ["dep:sha1", "dep:hex", "dep:tokio-util"]
mongodb = ["dep:mongodb", "dep:hex"]

[dependencies]
opencdc-core = { path = "../opencdc-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

tokio-postgres = { workspace = true, optional = true }
postgres-protocol = { workspace = true, optional = true }
postgres-types = { workspace = true, optional = true }
fallible-iterator = { workspace = true, optional = true }

sha1 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
mongodb = { workspace = true, optional = true }
