[package]
name = "opencdc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types for OpenCDC: ChangeEvent, Debezium envelope, Arrow schema mapping"

[dependencies]
arrow = { workspace = true, features = ["prettyprint"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
