[package]
name = "opencdc-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "End-to-end OpenCDC demo: connector → transforms → sinks → OpenLake"

[dependencies]
opencdc-core = { path = "../opencdc-core" }
opencdc-connector = { path = "../opencdc-connector" }
opencdc-pipeline = { path = "../opencdc-pipeline" }
opencdc-sink-openlake = { path = "../opencdc-sink-openlake" }
openlake-core.workspace = true
openlake-query.workspace = true
arrow.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
