[package]
name = "opencdc-demo"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "End-to-end OpenCDC demo: connector → transforms → sinks → OpenLake"

[dependencies]
opencdc-core = { path = "../opencdc-core" }
opencdc-connector = { path = "../opencdc-connector" }
opencdc-pipeline = { path = "../opencdc-pipeline" }
opencdc-sink-openlake = { path = "../opencdc-sink-openlake" }
openlake-core = { path = "../../../openlake/crates/openlake-core" }
openlake-query = { path = "../../../openlake/crates/openlake-query" }
arrow = "57"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
