[package]
name = "opencdc-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
opencdc-core = { path = "../opencdc-core" }
opencdc-connector = { path = "../opencdc-connector" }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"
