[package]
name = "opencdc-sink-openlake"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "OpenCDC sink that writes CDC events into OpenLake's in-memory TableStore"

[dependencies]
opencdc-core = { path = "../opencdc-core" }
opencdc-pipeline = { path = "../opencdc-pipeline" }
arrow = "57"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"
openlake-core = { path = "../../../openlake/crates/openlake-core" }
openlake-query = { path = "../../../openlake/crates/openlake-query" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
